# concept_search

./: .gitignore  README.md  pyproject.toml
heimdall_jobs/: setup_env.sh  submit_build_coactivation.py  submit_kimi_probe_server.py  submit_phase_a.py  submit_phase_a.sh  submit_rebuild_concept_state.py
scripts/: blind_explore.py  blind_prompt_matched.txt  blind_steer_inject.py  build_baseline_per_template.py  build_coactivation.py  build_coactivation_transcripts.py  build_full_active_probes.py  build_steer_probes.py  dump_concept_text.py  inspect_directions.py  liquid_prompt.txt  live_eval_test.py  phase_a_plot.py  phase_a_replay.py  phase_b_search.py  rebuild_concept_state.py  simple_prompt.txt  test_concept_director.py  test_steer_feature.py  test_v1_resolve.py
src/concept_search/: __init__.py  acquisition.py  agentic_eval.py  bo_loop.py  coactivation.py  concept_resolver.py  data.py  gp.py  kernel.py  metrics.py
tests/: test_agentic_eval.py  test_bo_loop.py  test_kernel.py
