[project]
name = "concept_search"
version = "0.1.0"
description = "GP-BO over SAE feature space with decoder-direction kernel"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "gpytorch>=1.11",
    "botorch>=0.10",
    "numpy",
    "scipy",
    "pandas",
    "httpx",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
